// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DonorCredit tests should render the UI snapshot correctly 1`] = `
<div
  className="css-8hxh7n"
  id="donor-credit-Test ID"
>
  <hr
    className="css-1auw00o"
  />
  <h3
    className="chakra-heading css-1e3lsoz"
  >
    Test Heading
  </h3>
  <div
    className="css-144igvy"
  >
    <div
      className="css-y1avno"
      dangerouslySetInnerHTML={
        {
          "__html": "Test Description",
        }
      }
    />
  </div>
</div>
`;

exports[`DonorCredit tests should render the UI snapshot correctly 2`] = `
<div
  className="css-8hxh7n"
  id="donor-credit-Test ID"
>
  <h3
    className="chakra-heading css-1e3lsoz"
  >
    Test Heading
  </h3>
  <div
    className="css-144igvy"
  >
    <div
      className="css-y1avno"
      dangerouslySetInnerHTML={
        {
          "__html": "Test Description",
        }
      }
    />
  </div>
</div>
`;

exports[`DonorCredit tests should render the UI snapshot correctly 3`] = `
<div
  className="css-8hxh7n"
  id="donor-credit-Test ID"
>
  <div
    className="css-144igvy"
  >
    <div
      className="css-y1avno"
      dangerouslySetInnerHTML={
        {
          "__html": "Test Description",
        }
      }
    />
  </div>
</div>
`;
